<resources>
    <string name="app_name">VIG-Mini</string>
    <string name="login">Anmelden</string>
    <string name="password">Passwort</string>
    <string name="e_mail">E-Mail</string>
    <string name="ForgotPassword">Passwort Vergessen?</string>
    <string name="register">Registrieren</string>
    <string name="hintForgotPassword">Geben Sie Ihre E-Mail Adresse ein, um das Passwort zurückzusetzen.</string>
    <string name="send">Senden</string>
    <string name="firstName">Vorname</string>
    <string name="name">Name</string>
    <string name="password_rpt">Passwort wiederholen</string>
    <string name="acc_exists">Sie haben bereits ein Konto?</string>
    <string name="soilMoisture">Bodenfeuchtigkeit</string>
    <string name="soilMoistureMin">0%</string>
    <string name="soilMoistureMax">100%</string>
    <string name="time">Uhrzeit</string>
    <string name="save">Speichern</string>
    <string name="temperatur">Temperatur</string>
    <string name="humidity">Luftfeuchtigkeit</string>
    <string name="temperaturMax">40°C</string>
    <string name="temperatureMin">20°C</string>
    <string name="value">Grenzwert</string>
    <string name="minus">-</string>
    <string name="from">Von</string>
    <string name="to">Bis</string>
    <string name="light">Licht</string>
    <string name="home">Übersicht</string>
    <string name="news">News</string>
    <string name="help">Hilfe</string>
    <string name="settings">Einstellungen</string>
    <string name="logout">Abmelden</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ok">Ok</string>
    <string name="cancel">Abbrechen</string>
    <string name="product_key">Produkt Schlüssel</string>
    <string name="placeholder">Platzhalter12345</string>
    <string name="old_password">Altes Passwort</string>
    <string name="new_password">Neues Passwort</string>
    <string name="new_password_repeat">Neues Passwort wiederholen</string>
    <string name="interval">Intervall</string>
    <string name="chart">Diagramm</string>
    <string-array name="interval">
        <item>24 h</item>
        <item>7 Tage</item>
        <item>30 Tage</item>
    </string-array>
    <string-array name="chart">
        <item>Kurvendiagramm</item>
        <item>Säuleniagramm</item>
        <item>Tabelle</item>
    </string-array>
</resources>