<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/forgotP_forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/ForgotPassword"
        android:textColor="@color/orangeRed"
        android:textSize="15pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotP_hintTextView"
        android:layout_width="@dimen/inputWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/hintForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotP_forgotPasswordTextView" />

    <TextView
        android:id="@+id/forgotP_emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:labelFor="@id/forgotP_emailEditText"
        android:text="@string/e_mail"
        android:textColor="@color/orangeRed"
        android:textSize="@dimen/inputLabelSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotP_hintTextView" />

    <EditText
        android:id="@+id/forgotP_emailEditText"
        android:layout_width="@dimen/inputWidth"
        android:layout_height="wrap_content"
        android:autofillHints="E-Mail"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/black"
        android:textCursorDrawable="@drawable/color_cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotP_emailTextView" />

    <Button
        android:id="@+id/forgotP_sendButton"
        android:layout_width="@dimen/inputWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/orangeRed"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotP_emailEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>