<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogCP_oldPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:labelFor="@id/dialogCP_oldPwEditText"
        android:textColor="@color/appBackground"
        android:textSize="@dimen/inputLabelSize"/>

    <EditText
        android:id="@+id/dialogCP_oldPwEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/dialogCP_newPw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:labelFor="@id/dialogCP_newPwEditText"
        android:textColor="@color/appBackground"
        android:textSize="@dimen/inputLabelSize"/>

    <EditText
        android:id="@+id/dialogCP_newPwEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/dialogCP_newPwWdh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_password_repeat"
        android:labelFor="@id/dialogCP_newPwWdhEditText"
        android:textColor="@color/appBackground"
        android:textSize="@dimen/inputLabelSize"/>

    <EditText
        android:id="@+id/dialogCP_newPwWdhEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />
</LinearLayout>